--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "./src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server.ts"
+    "test": "jest --testTimeout=10000",
+    "start": "nodemon ./src/server.ts",
+    "eventbridgetest": "jest   --testTimeout=10000 --findRelatedTests ./src/tests/eventbridge.test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-eventbridge": "^3.363.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.3",
@@ -20,13 +22,20 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0" 
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@jest/globals": "^29.5.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/redis": "^4.0.11",
+    "babel-jest": "^29.5.0",
     "i": "^0.3.7",
-    "npm": "^9.7.1"
+    "npm": "^9.7.1",
+    "ts-jest": "^29.1.1"
   }
 }
