--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.4",
-    "reward_service_store_schemas": "^1.0.5"
+    "reward_service_global_env": "^1.0.3",
+    "reward_service_store_schemas": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
