--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/node": "^18.16.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "joi": "^17.9.2",
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.4",
     "reward_service_global_env": "^1.0.3",
-    "reward_service_store_schemas": "^1.0.7"
+    "reward_service_store_schemas": "^1.0.7",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -41,6 +42,7 @@
     "babel-jest": "^29.5.0",
     "i": "^0.3.7",
     "npm": "^9.7.1",
+    "serverless-plugin-typescript": "^2.1.5",
     "ts-jest": "^29.1.1"
   }
 }
