--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.4",
+    "reward_service_global_auth_in": "^1.0.3",
     "reward_service_global_env": "^1.0.3",
     "reward_service_store_schemas": "^1.0.7",
     "serverless-http": "^3.2.0"
