--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.3",
+    "@types/stripe": "^8.0.417",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -28,7 +29,8 @@
     "reward_service_global_auth_in": "^1.0.3",
     "reward_service_global_env": "^1.0.3",
     "reward_service_store_schemas": "^1.0.12",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "stripe": "^12.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
